--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#000">
   <title>Electronics Store - HOME</title>
-  <head>
   <meta property="og:title" content="Electronics Store">
-  <meta property="og:image" content="https://electronicsstorebd.github.io//IMG/favicon.png">
-  <meta property="og:url" content="https://electronicsstorebd.github.io">
+  <meta property="og:image" content="/IMG/favicon.png">
+  <meta property="og:url" content="ElectronicsStoreBD.github.io">
   <link rel="shortcut icon" href="/IMG/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="/header.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/footer.css" type="text/css" media="all" />
