--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <title>Electronics Store - HOME</title>
   
   <meta property="og:title" content="Electronics Store">
-  <meta property="og:description" content="Your trusted electronics shop for Arduino, motors, LEDs, ICs & more.">
-  <meta property="og:image" content="https://electronicsstorebd.github.io/IMG/favicon.png">
-  <meta property="og:url" content="https://electronicsstorebd.github.io/">
-  <meta property="og:type" content="website">
+  <meta property="og:description" content="Your Trusted Electronics Shop — The Best In Price, Quality, And Service.">
+  <meta property="og:image" content="https://electronicsstorebd.github.io/IMG/1200.png">
+  <meta property="og:url" content="ElectronicsStoreBD.github.io">
+  <meta property="og:type" content="E-commerce Website">
   
   <link rel="shortcut icon" href="/IMG/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="/header.css" type="text/css" media="all" />
