--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
   <meta property="og:title" content="Electronics Store">
   <meta property="og:description" content="Your Trusted Electronics Shop — The Best In Price, Quality, And Service.">
-  <meta property="og:image" content="https://electronicsstorebd.github.io/IMG/Untitled.png">
+  <meta property="og:image" content="https://electronicsstorebd.github.io/IMG/Untitled~2.jpg">
   <meta property="og:url" content="ElectronicsStoreBD.github.io">
   <meta property="og:type" content="E-commerce Website">
   
