--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:url" content="ElectronicsStoreBD.github.io">
   <meta property="og:type" content="E-commerce Website">
   
-  <link rel="shortcut icon" href="/IMG/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="/IMG/9001.png" type="image/x-icon" />
   <link rel="stylesheet" href="/header.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/footer.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/cart.css" type="text/css" media="all" />
