--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   
   <meta property="og:title" content="Electronics Store">
   <meta property="og:description" content="Your Trusted Electronics Shop — The Best In Price, Quality, And Service.">
-  <meta property="og:image" content="https://electronicsstorebd.github.io/IMG/Untitled~2.jpg">
+  <meta property="og:image" content="https://electronicsstorebd.github.io/IMG/Untitled~2.png">
   <meta property="og:url" content="ElectronicsStoreBD.github.io">
   <meta property="og:type" content="E-commerce Website">
-  
-  <link rel="shortcut icon" href="/IMG/9001.png" type="image/x-icon" sizes="196×196"/>
+
+  <link href="https://electronicsstorebd.github.io/IMG/favicon.png" rel="shortcut icon" sizes="196x196"> 
+  <!--link rel="shortcut icon" href="/IMG/favicon.png" type="image/x-icon" /-->
   <link rel="stylesheet" href="/header.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/footer.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/cart.css" type="text/css" media="all" />
