--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <meta property="og:url" content="ElectronicsStoreBD.github.io">
   <meta property="og:type" content="E-commerce Website">
 
-  <link href="https://electronicsstorebd.github.io/IMG/favicon.png" rel="shortcut icon" sizes="196x196"> 
-  <!--link rel="shortcut icon" href="/IMG/favicon.png" type="image/x-icon" /-->
+  <link rel="icon" href="/IMG/favicon.png" type="image/png">
+  <link rel="apple-touch-icon" href="https://electronicsstorebd.github.io/IMG/favicon.png">
   <link rel="stylesheet" href="/header.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/footer.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/cart.css" type="text/css" media="all" />
