--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   <title>Electronics Store - HOME</title>
   
   <meta property="og:title" content="Electronics Store">
-  <meta property="og:description" content="Your Trusted Electronics Shop — The Best In Price, Quality, And Service.">
-  <meta property="og:image" content="https://electronicsstorebd.github.io/IMG/Untitled~2.jpg">
-  <meta property="og:url" content="ElectronicsStoreBD.github.io">
-  <meta property="og:type" content="E-commerce Website">
-
-  <link rel="icon" href="/IMG/favicon.png" type="image/png">
-  <link rel="apple-touch-icon" href="https://electronicsstorebd.github.io/IMG/favicon.png">
+  <meta property="og:description" content="Your Trusted Electronics Shop — The Best in Price, Quality, and Service.">
+  <meta property="og:image" content="https://electronicsstorebd.github.io/IMG/og-image.jpg">
+  <meta property="og:url" content="https://electronicsstorebd.github.io/">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Electronics Store">
+  
+  <link rel="icon" href="/IMG/favicon.png" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="/IMG/favicon-32x32.png"> 
+  <link rel="apple-touch-icon" sizes="180x180" href="https://electronicsstorebd.github.io/IMG/favicon.png"> 
   <link rel="stylesheet" href="/header.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/footer.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/cart.css" type="text/css" media="all" />
