--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:image" content="https://electronicsstorebd.github.io/IMG/og-image.jpg">
   <meta property="og:url" content="https://electronicsstorebd.github.io/">
   <meta property="og:type" content="website">
-  <meta property="og:site_name" content="Electronics Store">
+  <meta property="og:site_name" content="ElectronicsStoreBD.github.io">
   
   <link rel="icon" href="/IMG/favicon.png" type="image/x-icon">
   <link rel="icon" type="image/png" sizes="32x32" href="/IMG/favicon-32x32.png"> 
