--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
   <meta property="og:title" content="Electronics Store">
   <meta property="og:description" content="Your Trusted Electronics Shop — The Best in Price, Quality, and Service.">
-  <meta property="og:image" content="https://electronicsstorebd.github.io/IMG/og-image.jpg">
+  <meta property="og:image" content="https://electronicsstorebd.github.io/IMG/og-image.png">
   <meta property="og:url" content="https://electronicsstorebd.github.io/">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="ElectronicsStoreBD.github.io">
