--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
   <meta property="og:url" content="https://electronicsstorebd.github.io/">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="ElectronicsStoreBD.github.io">
+
+  <!-- Main favicon (modern browsers) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/IMG/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/IMG/favicon-16x16.png">
+  
+  <!-- Apple devices -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/IMG/apple-touch-icon.png">
+  
+  <!-- Fallback for old browsers -->
+  <link rel="shortcut icon" href="/IMG/favicon.png" type="image/x-icon">
   
   <link rel="stylesheet" href="/header.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/footer.css" type="text/css" media="all" />
