--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
   <link rel="stylesheet" href="/header.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/footer.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/cart.css" type="text/css" media="all" />
+
+  <link rel="manifest" href="/manifest.json">
+  
 </head>
 
 <body style="margin: 0;">
