--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#000">
   <title>Electronics Store - HOME</title>
-  
+
+  <meta name="description" content="Your Trusted Electronics Shop — The Best in Price, Quality, and Service.">
+  <link rel="canonical" href="https://electronicsstorebd.github.io/">
+  <meta name="robots" content="index, follow">
+
   <meta property="og:title" content="Electronics Store">
   <meta property="og:description" content="Your Trusted Electronics Shop — The Best in Price, Quality, and Service.">
   <meta property="og:image" content="https://electronicsstorebd.github.io/IMG/og-image.png">
@@ -17,10 +21,8 @@
   <!-- Main favicon (modern browsers) -->
   <link rel="icon" type="image/png" sizes="32x32" href="/IMG/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/IMG/favicon-16x16.png">
-  
   <!-- Apple devices -->
   <link rel="apple-touch-icon" sizes="180x180" href="/IMG/apple-touch-icon.png">
-  
   <!-- Fallback for old browsers -->
   <link rel="shortcut icon" href="/IMG/favicon.png" type="image/x-icon">
   
@@ -29,6 +31,23 @@
   <link rel="stylesheet" href="/cart.css" type="text/css" media="all" />
 
   <link rel="manifest" href="/manifest.json">
+
+
+    <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Store",
+    "name": "Electronics Store",
+    "url": "https://electronicsstorebd.github.io/",
+    "description": "Your Trusted Electronics Shop — The Best in Price, Quality, and Service.",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Dhaka",
+      "addressRegion": "DHAKA",
+      "addressCountry": "BD"
+    }
+  }
+    </script>
   
 </head>
 
