--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:image" content="https://electronicsstorebd.github.io/IMG/og-image.png">
   <meta property="og:url" content="https://electronicsstorebd.github.io/">
   <meta property="og:type" content="website">
-  <meta property="og:site_name" content="ElectronicsStoreBD.github.io">
+  <meta property="og:site_name" content="ElectronicsStoreBD">
 
   <!-- Main favicon (modern browsers) -->
   <link rel="icon" type="image/png" sizes="32x32" href="/IMG/favicon-32x32.png">
