--- a/index.html
+++ b/index.html
@@ -33,21 +33,7 @@
   <link rel="manifest" href="/manifest.json">
 
 
-    <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Store",
-    "name": "Electronics Store",
-    "url": "https://electronicsstorebd.github.io/",
-    "description": "Your Trusted Electronics Shop — The Best in Price, Quality, and Service.",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Dhaka",
-      "addressRegion": "DHAKA",
-      "addressCountry": "BD"
-    }
-  }
-    </script>
+    <script src="seo.json" type="application/ld+json"></script>
   
 </head>
 
