--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -15,7 +15,7 @@
       "@context": "https://schema.org",
       "@type": "Store",
       "name": "ElectronicsStoreBD",
-      "url": "https://electronicsstorebd.github.io/",
+      "url": "https://electronicsstorebd.github.io/SEARCH",
       "telephone": "+8801872605055",
       "openingHours": "Mo-Su 00:00-23:59",
       "description": "Your Trusted Electronics Shop — The Best in Price, Quality, and Service.",
