--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -496,7 +496,7 @@
   <header class="header">
     <div class="container" style="display:flex">
       
-      <h2 class="logo"><a style="all:unset;" href="/Electronics-Store">Electronics Store</a></h2>
+      <h2 class="logo"><a style="all:unset;" href="/">Electronics Store</a></h2>
       <nav id="nav-menu">
         <a class="hide" href="/">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
