--- a/404/index.html
+++ b/404/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#000">
+  <meta name="theme-color" content="#000000">
+  <meta name="msapplication-navbutton-color" content="#000000">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">  
+
   <title>Electronics Store - 404</title>
   <link rel="shortcut icon" href="/IMG/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="/header.css" type="text/css" media="all" />
@@ -18,7 +22,7 @@
   <header class="header">
     <div class="container" style="display:flex">
       
-      <h2 class="logo"><a style="all:unset;" href="/">Electronics Store</a></h2>
+      <h1 class="logo"><a style="all:unset;" href="/">Electronics Store</a></h1>
       <nav id="nav-menu">
         <a class="hide" href="/">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
