--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">  
 
 
-  <title>Electronics Store - HOME</title>
+  Electronics Store: Arduino, Robotics, DIY Kits & Components in BD | Buy Online</title>
 
   <meta name="description" content="Your Trusted Electronics Shop — The Best in Price, Quality, and Service.">
   <link rel="canonical" href="https://electronicsstorebd.github.io/">
