--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">  
 
 
-  Electronics Store: Arduino, Robotics, DIY Kits & Components in BD | Buy Online</title>
-
+  <title>Electronics Store: Arduino, Robotics, DIY Kits & Components in BD | Buy Online</title>
   <meta name="description" content="Your Trusted Electronics Shop — The Best in Price, Quality, and Service.">
   <link rel="canonical" href="https://electronicsstorebd.github.io/">
   <meta name="robots" content="index, follow">
@@ -362,157 +361,266 @@
         "electronicsstorebd",
         "ElectronicsStoreBD"
       ],
-      "publisher": {
-        "@type": "Store",
-        "name": "ElectronicsStoreBD",
-        "url": "https://electronicsstorebd.github.io/"
-      },
-      "inLanguage": ["bn", "en"],
-      "sameAs": [
-        "https://www.facebook.com/officialelectronicsstore",
-        "https://www.instagram.com/officialelectronicsstore",
-        "https://youtube.com/@officialelectronicsstore"
-      ],
       "mainEntity": [
       {
         "@type": "Product",
         "name": "Arduino Uno R3",
         "sku": "1200",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=1200",
-        "description": "Based on the ATmega328P microcontroller, 1 PIC."
+        "description": "Based on the ATmega328P microcontroller, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "0.00",
+          "availability": "https://schema.org/OutOfStock"
+        }
       },
       {
         "@type": "Product",
         "name": "TP4056 type B",
         "sku": "6112",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=6112",
-        "description": "Type B3.7v battery charger and Auto cut BMS, 1 PIC."
+        "description": "Type B3.7v battery charger and Auto cut BMS, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "20.00",
+          "availability": "https://schema.org/InStock"
+        }
       },
       {
         "@type": "Product",
         "name": "Wheel",
         "sku": "4333",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=4333",
-        "description": "3v-9v DC gare motor, 1 PIC."
+        "description": "3v-9v DC gare motor, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "60.00",
+          "availability": "https://schema.org/InStock"
+        }
       },
       {
         "@type": "Product",
-        "name": "Car Kit",
-        "sku": "2097",
-        "url": "https://electronicsstorebd.github.io/SEARCH?id=2097",
-        "description": "Four gear motor, four wheel, battery holder, 1 SET."
+        "name": "UT33B+ Multimeter",
+        "sku": "3833",
+        "url": "https://electronicsstorebd.github.io/SEARCH?id=3833",
+        "description": "Uni - T UT33B + digital multimeter, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "1020.00",
+          "availability": "https://schema.org/InStock"
+        }
       },
       {
         "@type": "Product",
         "name": "18650 Battery",
         "sku": "8650",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=8650",
-        "description": "18650 Battery 3.7V Li-ion Rechargeable Battery, 1 PIC."
+        "description": "18650 Battery 3.7V Li-ion Rechargeable Battery, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "65.00",
+          "availability": "https://schema.org/InStock"
+        }
       },
       {
         "@type": "Product",
         "name": "180 DC Motor",
         "sku": "5180",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=5180",
-        "description": "3v-9v Short Shaft 180 DC motor, 1 PIC."
+        "description": "3v-9v Short Shaft 180 DC motor, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "55.00",
+          "availability": "https://schema.org/InStock"
+        }
       },
       {
         "@type": "Product",
         "name": "Flat DC Motor",
         "sku": "5335",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=5335",
-        "description": "3v-9v flat DC motor, 1 PIC."
+        "description": "3v-9v flat DC motor, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "30.00",
+          "availability": "https://schema.org/InStock"
+        }
       },
       {
         "@type": "Product",
         "name": "130 DC Motor",
         "sku": "5130",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=5130",
-        "description": "3v-9v 130 DC motor, 1 PIC."
+        "description": "3v-9v 130 DC motor, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "15.00",
+          "availability": "https://schema.org/InStock"
+        }
       },
       {
         "@type": "Product",
         "name": "Pump DC Motor",
         "sku": "5679",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=5679",
-        "description": "DC 3v-6v Mini Submersible Pump 120 L/H Ultra-Quiet, 1 PIC."
+        "description": "DC 3v-6v Mini Submersible Pump 120 L/H Ultra-Quiet, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "50.00",
+          "availability": "https://schema.org/InStock"
+        }
       },
       {
         "@type": "Product",
         "name": "TP4056 type C",
         "sku": "6113",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=6113",
-        "description": "Type C 3.7v battery charger and Auto cut BMS, 1 PIC."
+        "description": "Type C 3.7v battery charger and Auto cut BMS, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "20.00",
+          "availability": "https://schema.org/InStock"
+        }
       },
       {
         "@type": "Product",
         "name": "Gare Motor",
         "sku": "5888",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=5888",
-        "description": "3v-9v DC gare motor, 1 PIC."
+        "description": "3v-9v DC gare motor, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "70.00",
+          "availability": "https://schema.org/InStock"
+        }
       },
       {
         "@type": "Product",
         "name": "BC557 NPN Transistor",
         "sku": "9557",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=9557",
-        "description": "BC547 NPN transistor, gain 110, collector current 100 mA, 1 PIC."
+        "description": "BC547 NPN transistor, gain 110, collector current 100 mA, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "5.00",
+          "availability": "https://schema.org/InStock"
+        }
       },
       {
         "@type": "Product",
         "name": "Push Button",
         "sku": "7778",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=7778",
-        "description": "Push button switch 4 pin (12mm*12mm), 1 PIC."
+        "description": "Push button switch 4 pin (12mm*12mm), 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "10.00",
+          "availability": "https://schema.org/InStock"
+        }
       },
       {
         "@type": "Product",
         "name": "RED LED & 330Ω",
         "sku": "8111",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=8111",
-        "description": "Small red LED with 330Ω resistance protection, 1 PIC."
+        "description": "Small red LED with 330Ω resistance protection, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "5.00",
+          "availability": "https://schema.org/InStock"
+        }
       },
       {
         "@type": "Product",
         "name": "WHITE LED & 330Ω",
         "sku": "8114",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=8114",
-        "description": "Small white LED with 330Ω resistance protection, 1 PIC."
+        "description": "Small white LED with 330Ω resistance protection, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "5.00",
+          "availability": "https://schema.org/InStock"
+        }
       },
       {
         "@type": "Product",
         "name": "5mm RED LED",
         "sku": "8101",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=8101",
-        "description": "Small red LED 5mm, 1 PIC."
+        "description": "Small red LED 5mm, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "3.00",
+          "availability": "https://schema.org/InStock"
+        }
       },
       {
         "@type": "Product",
         "name": "5mm WHITE LED",
         "sku": "8104",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=8104",
-        "description": "Small white LED 5mm, 1 PIC."
+        "description": "Small white LED 5mm, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "3.00",
+          "availability": "https://schema.org/InStock"
+        }
       },
       {
         "@type": "Product",
         "name": "330Ω Resistor",
         "sku": "9330",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=9330",
-        "description": "330 Ohm 1/2 Watt Resistor, 1 PIC."
+        "description": "330 Ohm 1/2 Watt Resistor, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "2.00",
+          "availability": "https://schema.org/InStock"
+        }
       },
       {
         "@type": "Product",
         "name": "1kΩ Resistor",
         "sku": "9001",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=9001",
-        "description": "1k Ohm 1/2 Watt Resistor, 1 PIC."
+        "description": "1k Ohm 1/2 Watt Resistor, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "2.00",
+          "availability": "https://schema.org/InStock"
+        }
       },
       {
         "@type": "Product",
         "name": "100kΩ Resistor",
         "sku": "9100",
         "url": "https://electronicsstorebd.github.io/SEARCH?id=9100",
-        "description": "100k Ohm 1/2 Watt Resistor, 1 PIC."
+        "description": "100k Ohm 1/2 Watt Resistor, 1 PIC.",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "BDT",
+          "price": "2.00",
+          "availability": "https://schema.org/InStock"
+        }
       }]
     }
   </script>
