--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="msapplication-navbutton-color" content="#000000">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">  
-
+  <meta name="google-site-verification" content="exsIHrvobdrnubpQyM74xkcOP8VdjYaUUXF3DKQacLo" />
 
   <title>Electronics Store: Arduino, Robotics, DIY Kits & Components in BD | Buy Online</title>
   <meta name="description" content="Your Trusted Electronics Shop — The Best in Price, Quality, and Service.">
