--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -8,7 +8,7 @@
   <meta name="msapplication-navbutton-color" content="#000000">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">  
-
+  <meta name="google-site-verification" content="exsIHrvobdrnubpQyM74xkcOP8VdjYaUUXF3DKQacLo" />
   <title>Electronics Store - Search</title>
   <link rel="shortcut icon" href="/IMG/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="/header.css" type="text/css" media="all" />
