--- a/index.html
+++ b/index.html
@@ -695,16 +695,116 @@
     <div class="slider-viewport">
       <div class="slider-track">
         <!-- Slide items: change src/alt as needed -->
-        <figure class="slide"><img src="/IMG/5180.png" alt="Scenic view 1" fetchpriority="high"></figure>
-        <figure class="slide"><img src="/IMG/5679.png" alt="Scenic view 2" fetchpriority="high"></figure>
-        <figure class="slide"><img src="/IMG/6112.png" alt="Scenic view 3" fetchpriority="high"ও></figure>
-        <figure class="slide"><img src="/IMG/6113.png" alt="Scenic view 4" loading="lazy"></figure>
-        <figure class="slide"><img src="/IMG/9100.png" alt="Scenic view 5" loading="lazy"></figure>
-        <figure class="slide"><img src="/IMG/9330.png" alt="Scenic view 6" loading="lazy"></figure>
-        <figure class="slide"><img src="/IMG/9001.png" alt="Scenic view 7" loading="lazy"></figure>
-        <figure class="slide"><img src="/IMG/7778.png" alt="Scenic view 8" loading="lazy"></figure>
-        <figure class="slide"><img src="/IMG/8650.png" alt="Scenic view 9" loading="lazy"></figure>
-        <figure class="slide"><img src="/IMG/5130.png" alt="Scenic view 10" loading="lazy"></figure>
+        <figure class="slide">
+          <a href="https://electronicsstorebd.github.io/SEARCH?id=5180">
+            <img src="/IMG/5180.png" alt="Product X: Luxury Bag" loading="lazy">
+            <div class="slide-content">
+              <h3 class="product-name">180 DC Motor</h3>
+              <p class="product-details">
+                3v-9v Short Shaft 180 DC motor.
+              </p>
+            </div>
+          </a>
+        </figure>
+        <figure class="slide">
+          <a href="https://electronicsstorebd.github.io/SEARCH?id=5679">
+            <img src="/IMG/5679.png" alt="Scenic view 2" loading="lazy">
+            <div class="slide-content">
+              <h3 class="product-name">Pump DC Motor</h3>
+              <p class="product-details">
+                DC 3v-6v Mini Submersible Pump 120 L/H Ultra-Quiet.
+              </p>
+            </div>
+          </a>
+        </figure>
+        <figure class="slide">
+          <a href="https://electronicsstorebd.github.io/SEARCH?id=6112">
+            <img src="/IMG/6112.png" alt="Scenic view 3" loading="lazy">
+            <div class="slide-content">
+              <h3 class="product-name">TP4056 type B</h3>
+              <p class="product-details">
+                Type B 3.7v battery charger and Auto cut BMS.
+              </p>
+            </div>
+          </a>
+        </figure>
+        <figure class="slide">
+          <a href="https://electronicsstorebd.github.io/SEARCH?id=6113">
+            <img src="/IMG/6113.png" alt="Scenic view 4" loading="lazy">
+            <div class="slide-content">
+              <h3 class="product-name">TP4056 type C</h3>
+              <p class="product-details">
+                Type C 3.7v battery charger and Auto cut BMS.
+              </p>
+            </div>
+          </a>
+        </figure>
+        <figure class="slide">
+          <a href="https://electronicsstorebd.github.io/SEARCH?id=9100">
+            <img src="/IMG/9100.png" alt="Scenic view 5" loading="lazy">
+            <div class="slide-content">
+              <h3 class="product-name">100kΩ Resistor</h3>
+              <p class="product-details">
+                100k Ohm 1/2 Watt Resistor.
+              </p>
+            </div>
+          </a>
+        </figure>
+        <figure class="slide">
+          <a href="https://electronicsstorebd.github.io/SEARCH?id=9330">
+            <img src="/IMG/9330.png" alt="Scenic view 6" loading="lazy">
+            <div class="slide-content">
+              <h3 class="product-name">330Ω Resistor</h3>
+              <p class="product-details">
+                330 Ohm 1/2 Watt Resistor.
+              </p>
+            </div>
+          </a>
+        </figure>
+        <figure class="slide">
+          <a href="https://electronicsstorebd.github.io/SEARCH?id=9001">
+            <img src="/IMG/9001.png" alt="Scenic view 7" loading="lazy">
+            <div class="slide-content">
+              <h3 class="product-name">1kΩ Resistor</h3>
+              <p class="product-details">
+                1k Ohm 1/2 Watt Resistor.
+              </p>
+            </div>
+          </a>
+        </figure>
+        <figure class="slide">
+          <a href="https://electronicsstorebd.github.io/SEARCH?id=7778">
+            <img src="/IMG/7778.png" alt="Scenic view 8" loading="lazy">
+            <div class="slide-content">
+              <h3 class="product-name">Push Button</h3>
+              <p class="product-details">
+                Push button switch 4 pin (12mm*12mm).
+              </p>
+            </div>
+          </a>
+        </figure>
+        <figure class="slide">
+          <a href="https://electronicsstorebd.github.io/SEARCH?id=8650">
+            <img src="/IMG/8650.png" alt="Scenic view 9" loading="lazy">
+            <div class="slide-content">
+              <h3 class="product-name">18650 Battery</h3>
+              <p class="product-details">
+                18650 Battery 3.7V Li-ion Rechargeable Battery.
+              </p>
+            </div>
+          </a>
+        </figure>
+        <figure class="slide">
+          <a href="https://electronicsstorebd.github.io/SEARCH?id=5130">
+            <img src="/IMG/5130.png" alt="Scenic view 10" loading="lazy">
+            <div class="slide-content">
+              <h3 class="product-name">130 DC Motor</h3>
+              <p class="product-details">
+                3v-9v 130 DC motor.
+              </p>
+            </div>
+          </a>
+        </figure>
       </div>
       <!-- Gradient overlay + caption area (optional) -->
       <div class="slider-overlay" aria-hidden="true"></div>
@@ -715,7 +815,7 @@
       <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0" />
       </svg>
-      </button>
+    </button>
     <button class="slider-btn next" aria-label="Next slide">
       <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708" />
