Update alt text for product images in slider

--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
         <!-- Slide items: change src/alt as needed -->
         <figure class="slide">
           <a href="https://electronicsstorebd.github.io/SEARCH?id=5180">
-            <img src="/IMG/5180.png" alt="Product X: Luxury Bag" loading="lazy">
+            <img src="/IMG/5180.png" alt="Scenic view 1">
             <div class="slide-content">
               <h3 class="product-name">180 DC Motor</h3>
               <p class="product-details">
@@ -708,7 +708,7 @@
         </figure>
         <figure class="slide">
           <a href="https://electronicsstorebd.github.io/SEARCH?id=5679">
-            <img src="/IMG/5679.png" alt="Scenic view 2" loading="lazy">
+            <img src="/IMG/5679.png" alt="Scenic view 2">
             <div class="slide-content">
               <h3 class="product-name">Pump DC Motor</h3>
               <p class="product-details">
@@ -719,7 +719,7 @@
         </figure>
         <figure class="slide">
           <a href="https://electronicsstorebd.github.io/SEARCH?id=6112">
-            <img src="/IMG/6112.png" alt="Scenic view 3" loading="lazy">
+            <img src="/IMG/6112.png" alt="Scenic view 3">
             <div class="slide-content">
               <h3 class="product-name">TP4056 type B</h3>
               <p class="product-details">
