--- a/ROBOTICS/index.html
+++ b/ROBOTICS/index.html
@@ -242,7 +242,7 @@
   </div>
   
   <div id="es-checkout-overlay" class="overlay" aria-hidden="true" style="display:none;">
-    <div class="modal" role="dialog" aria-modal="true" aria-label="Checkout">
+    <div id="booxx" class="modal" role="dialog" aria-modal="true" aria-label="Checkout">
       <header>
         <strong>Checkout</strong>
         <button class="btn close" id="es-close-checkout">Close</button>
@@ -262,6 +262,7 @@
           </div>
         </div>
         <aside style="flex:1; min-width:200px;">
+          <div id="box">
           <div id="es-checkout-items" style="display:flex;flex-direction:column;gap:8px;margin-bottom:12px"></div>
           <div class="summary">
             <div style="display:flex;justify-content:space-between">
@@ -282,7 +283,7 @@
               <div id="es-co-grand">৳0.00</div>
             </div>
           </div>
-          
+          </div>
           <!-- WhatsApp styled send button -->
           <a id="es-whatsapp-send" class="wa-btn" href="#" target="_blank" rel="noopener noreferrer" style="display:block;margin-top:12px">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" style="transform: translateY(8%);" viewBox="0 0 16 16">
@@ -293,11 +294,38 @@
         </aside>
       </div>
       <div class="footer">
-        <!-- Confirm purchase JS intentionally EMPTY for later integration -->
-        <button class="btn primary" id="es-confirm-purchase">Confirm purchase</button>
+        <a class="aObtn" id="es-confirm-purchase">I don’t want to use WhatsApp</a>
+        <div class="sBtnCon">
+          <a id="es-messenger-send" class="btnSm messenger" >
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-messenger" style="transform: translateY(8%);" viewBox="0 0 16 16">
+              <path d="M0 7.76C0 3.301 3.493 0 8 0s8 3.301 8 7.76-3.493 7.76-8 7.76c-.81 0-1.586-.107-2.316-.307a.64.64 0 0 0-.427.03l-1.588.702a.64.64 0 0 1-.898-.566l-.044-1.423a.64.64 0 0 0-.215-.456C.956 12.108 0 10.092 0 7.76m5.546-1.459-2.35 3.728c-.225.358.214.761.551.506l2.525-1.916a.48.48 0 0 1 .578-.002l1.869 1.402a1.2 1.2 0 0 0 1.735-.32l2.35-3.728c.226-.358-.214-.761-.551-.506L9.728 7.381a.48.48 0 0 1-.578.002L7.281 5.98a1.2 1.2 0 0 0-1.735.32z" />
+            </svg>
+            Send Order on Messenger
+          </a>
+          <a id="es-messages-send" class="btnSm messages" href="#" target="_blank" rel="noopener noreferrer">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-square-text-fill" style="transform: translateY(8%);" viewBox="0 0 16 16">
+              <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.5a1 1 0 0 0-.8.4l-1.9 2.533a1 1 0 0 1-1.6 0L5.3 12.4a1 1 0 0 0-.8-.4H2a2 2 0 0 1-2-2zm3.5 1a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1zm0 2.5a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1zm0 2.5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1z" />
+            </svg>
+            Send Order on Messages
+          </a>
+          <a id="es-mail-send" class="btnSm mail" href="#" target="_blank" rel="noopener noreferrer" >
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-at-fill" style="transform: translateY(8%);" viewBox="0 0 16 16">
+              <path d="M2 2A2 2 0 0 0 .05 3.555L8 8.414l7.95-4.859A2 2 0 0 0 14 2zm-2 9.8V4.698l5.803 3.546zm6.761-2.97-6.57 4.026A2 2 0 0 0 2 14h6.256A4.5 4.5 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586zM16 9.671V4.697l-5.803 3.546.338.208A4.5 4.5 0 0 1 12.5 8c1.414 0 2.675.652 3.5 1.671" />
+              <path d="M15.834 12.244c0 1.168-.577 2.025-1.587 2.025-.503 0-1.002-.228-1.12-.648h-.043c-.118.416-.543.643-1.015.643-.77 0-1.259-.542-1.259-1.434v-.529c0-.844.481-1.4 1.26-1.4.585 0 .87.333.953.63h.03v-.568h.905v2.19c0 .272.18.42.411.42.315 0 .639-.415.639-1.39v-.118c0-1.277-.95-2.326-2.484-2.326h-.04c-1.582 0-2.64 1.067-2.64 2.724v.157c0 1.867 1.237 2.654 2.57 2.654h.045c.507 0 .935-.07 1.18-.18v.731c-.219.1-.643.175-1.237.175h-.044C10.438 16 9 14.82 9 12.646v-.214C9 10.36 10.421 9 12.485 9h.035c2.12 0 3.314 1.43 3.314 3.034zm-4.04.21v.227c0 .586.227.8.581.8.31 0 .564-.17.564-.743v-.367c0-.516-.275-.708-.572-.708-.346 0-.573.245-.573.791" />
+            </svg>
+            Send Order on Mail
+          </a>
+          <a onclick="startBoxPiP('box')" id="es-phone-send" class="btnSm phone" >
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" style="transform: translateY(8%);" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
+            </svg>
+            Send Order on Phone
+          </a>
+        </div>
       </div>
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <script src="/hamburger.js" type="text/javascript" charset="utf-8"></script>
   <script src="/cart.js" type="text/javascript" charset="utf-8"></script>
   <script>
