Register service worker in index.html
Add service worker registration script to index.html

--- a/index.html
+++ b/index.html
@@ -624,6 +624,11 @@
       }]
     }
   </script>
+  <script>
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("/service-worker.js");
+    }
+  </script>
   
 </head>
 
