--- a/index.html
+++ b/index.html
@@ -1227,6 +1227,7 @@
         usedProducts.add(product);
       }
       cartFtouch(randomCart);
+      attachToExistingButtons();
     }
     
     let canLoad = true;
